--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "server.js",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "concurrently": "^6.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -18,7 +19,7 @@
     "validator": "^13.6.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "client": "cd client && npm start",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   }
