--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "validator": "^13.6.0"
   },
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "client": "cd client && npm start",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   }
